--- a/sunnyside-agency-landing-page-main/style.css
+++ b/sunnyside-agency-landing-page-main/style.css
@@ -1,283 +1,437 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,900&display=swap");
 
-.header{
-    background-image: url('./design/images/desktop/image-header.jpg');
-    width: 100vw;
-    height: 100vh;
-    background-size: cover ;
-}
-
-.menu{
-    display: flex;
-    justify-content: space-between;
-
-}
-
-.title{
-    margin-top: 25px;
-    margin-left: 30px;
-    font-size: 20px;
-    color: white;
-    font-family: 'Barlow', sans-serif;
-    
-}
-
-.lista{
-    margin-right: 30px;
-    margin-top: 20px;
-    font-family: 'Barlow', sans-serif;
-    font-weight: 400;
-    display: flex;
-    
-
-}
-
-.link{
-    padding: 10px 18px;
-    margin-right: 20px;
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    cursor: pointer;
-   
-
-
+.quadrados-mobile{
+    display: none;
 }
 
 
-.link:hover{
-   color: black;
-   font-family: 'Fraunces', serif;
-   font-weight: 500;
-   background-color: white;
-   padding: 10px 18px;
-   border-radius: 30px;
-   
+.header {
+  background-image: url("./design/images/desktop/image-header.jpg");
 
-
+  background-size: cover;
 }
 
-.slogan{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 5%;
-    font-family: 'Fraunces', serif;
-    font-weight: bold;
-    color: white;
-    letter-spacing: 10px;
+.menu {
+  display: flex;
+  justify-content: space-between;
 }
 
-.slogan h1{
-    margin-top:2% ;
+.title {
+  margin-top: 25px;
+  margin-left: 30px;
+  font-size: 24px;
+  color: white;
+  font-family: "Barlow", sans-serif;
 }
 
-.seta{
-    margin-top: 8%;
-    
+.lista {
+  margin-right: 30px;
+  margin-top: 20px;
+  font-family: "Barlow", sans-serif;
+  font-weight: 400;
+  display: flex;
 }
 
-.quadrados{
-    height: 30vh;
-    width: 100vw;
-    
+.link {
+  padding: 10px 18px;
+  margin-right: 20px;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  cursor: pointer;
 }
 
-
-.image{
-    width: 100%;
-    padding: 0;
-    margin: 0;
+.link:hover {
+  color: black;
+  font-family: "Fraunces", serif;
+  font-weight: 500;
+  background-color: white;
+  padding: 10px 18px;
+  border-radius: 30px;
 }
 
-
-.texto{
-    flex-direction: column;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50%;
-    
-    
+.slogan {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 5%;
+  font-family: "Fraunces", serif;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 10px;
+  padding-bottom: 20%;
 }
 
-.conteudo{
-    display: flex;
-    align-items: left;
-    flex-direction: column;
-    margin-left: 20%;
-    margin-top: 10%;
-}
-.slogan-2{
-    font-family: 'Fraunces', serif;
-    color: #222d39;
-    font-size: 2rem;
-    margin-top: 17%;
-    width: 66%;
+.slogan h1 {
+  margin-top: 3%;
+  padding-bottom: 3rem;
 }
 
-.paragrafo{
-    margin-top: 5%;
-    width: 78%;
-    color: #8e8d92;
+.menu-mobile{
+    display: none;
 }
 
-.learn{
-    font-family: 'Fraunces', serif;
-    margin-top: 5%;
-    margin-bottom: 17%;
-    
+.seta {
+  margin-top: 4%;
 }
 
-.learn:hover{
-    text-decoration: underline;
-    text-decoration-color: #f2d512 ;
-    cursor: pointer;
+.quadrados {
+  height: 30vh;
+  width: 100vw;
 }
 
-
-.foto-cereja{
-    background-size: cover;
-    background-image: url("./design/images/desktop/image-graphic-design.jpg");
-}
-.foto-laranja{
-    background-size: cover;
-    background-image: url("./design/images/desktop/image-photography.jpg");
+.image {
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
-.graphic{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 53%;
-    font-family: 'Fraunces', serif;
-    font-size: 24px;
-    color: #387368;
+.texto {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
 }
 
-.graphic-text{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 4%;
-    text-align: center;
-    margin-left: 24%;
-    width: 51%;
-    margin-bottom: 9%;
-    color: #225d51;
-    font-weight: 600;
-    font-size: 16px;
-   
+.conteudo {
+  display: flex;
+  align-items: left;
+  flex-direction: column;
+  margin-left: 20%;
+  margin-top: 10%;
+}
+.slogan-2 {
+  font-family: "Fraunces", serif;
+  color: #222d39;
+  font-size: 2rem;
+  margin-top: 17%;
+  width: 66%;
 }
 
-
-.clientes-titulo{
-    margin-top: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10%;
-    font-family: 'Fraunces', serif;
-    color: #abacad;
-    letter-spacing: 10px;
-    font-size: 18px;
-    margin-bottom: 3%;
+.paragrafo {
+  margin-top: 5%;
+  width: 78%;
+  color: #8e8d92;
 }
 
-.cliente{
-    margin-top: 10%;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 10%;
+.learn {
+  font-family: "Fraunces", serif;
+  margin-top: 5%;
+  margin-bottom: 17%;
 }
 
-.imagem-emily{
-    width: 16%;
-    border-radius: 100%;
+.learn:hover {
+  text-decoration: underline;
+  text-decoration-color: #f2d512;
+  cursor: pointer;
 }
 
-.cliente-texto{
-    margin-top: 10%;
-    text-align: center;
-    width: 71%;
-    font-weight: 600;
-    font-size: 16px;
-    color: #5b5c5e;
+.foto-cereja {
+  background-size: cover;
+  background-image: url("./design/images/desktop/image-graphic-design.jpg");
+}
+.foto-laranja {
+  background-size: cover;
+  background-image: url("./design/images/desktop/image-photography.jpg");
 }
 
-.assinatura{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
+.graphic {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 53%;
+  font-family: "Fraunces", serif;
+  font-size: 24px;
+  color: #387368;
 }
 
-.nome{
-    font-family: 'Fraunces', serif;
-    color: #242d36;
-    font-size: 17px;
+.graphic-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4%;
+  text-align: center;
+  margin-left: 24%;
+  width: 51%;
+  margin-bottom: 9%;
+  color: #225d51;
+  font-weight: 600;
+  font-size: 16px;
 }
 
-.profissao{
-    margin-top: 7%;
-    font-size: 13px;
-    color: #bfbfbe;
-}
-.comida{
-    width: 100%;
-    
+.clientes-titulo {
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  font-family: "Fraunces", serif;
+  color: #abacad;
+  letter-spacing: 10px;
+  font-size: 18px;
+  margin-bottom: 3%;
 }
 
-.footer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: #90d4c5;
-   
+.cliente {
+  margin-top: 10%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 10%;
+}
+
+.imagem-emily {
+  width: 16%;
+  border-radius: 100%;
+}
+
+.cliente-texto {
+  margin-top: 10%;
+  text-align: center;
+  width: 71%;
+  font-weight: 600;
+  font-size: 16px;
+  color: #5b5c5e;
+}
+
+.assinatura {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.nome {
+  font-family: "Fraunces", serif;
+  color: #242d36;
+  font-size: 17px;
+}
+
+.profissao {
+  margin-top: 7%;
+  font-size: 13px;
+  color: #bfbfbe;
+}
+.comida {
+  width: 100%;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #90d4c5;
 }
 
 .sunnySide{
-    margin-top: 3%;
-    font-family: 'Fraunces', serif;
-    color: #2b7262;
-    font-size: 32px;
-}
-
-.footer-links{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top:1.5%;
-    
-}
-
-.footer-link{
-    margin: 0 30px;
-    font-weight: 600;
-    color: #4e9283;
-}
-
-.footer-link:hover{
-    color: white;
-    cursor: pointer;
-}
-
-.social-media{
     margin-top: 4%;
-    margin-bottom: 4%;
+    margin-bottom: 1%;
 }
 
-.social-media svg{
-    margin: 0 15px;
+.sunnySide path {
+ 
+  font-family: "Fraunces", serif;
+  color: #2b7262;
+  font-size: 32px;
+  fill: #2b7262;
+
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1.5%;
+}
+
+.footer-link {
+  margin: 0 30px;
+  font-weight: 600;
+  color: #4e9283;
+}
+
+.footer-link:hover {
+  color: white;
+  cursor: pointer;
+}
+
+.social-media {
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+
+.social-media svg {
+  margin: 0 15px;
 }
 
 .social-media svg:hover path {
-    fill: white;
-    cursor: pointer;
+  fill: white;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 991px) {
+    .quadrados-mobile{
+        display: block;
+    }
+
+  .header {
+    background-image: url("./design/images/mobile/image-header.jpg");
+    height: 66vh;
+    background-size: contain;
+  }
+
+
+
+  .menu-mobile {
+    margin-top: 23px;
+    display: flex;
+  }
+
+  .lista {
+    display: none;
+  }
+
+  .slogan {
+    margin-top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .slogan h1 {
+    text-align: center;
+    font-size: 2.8rem;
+    margin-top: 20%;
+  }
+
+  .seta {
+    margin-top: 0%;
+  }
+
+  .footer {
+    padding: 8% 0;
+  }
+
+  .menu-mob {
+    position: absolute;
+    left: 70%;
+    top: 8%;
+    background-color: white;
+    padding: 10% 10%;
+    display: flex;
+    flex-direction: column;
+    border-radius:15px ;
+    display: none ;
+  }
+
+  .menu-mob.active {
+    display: flex;
+    
+  }
+
+  .menu-mob.active #item1{
+    margin-top: 0;
+  }
+
+  .botao {
+    background: none;
+    border: none;
+    
+    margin-top: 17%;
+  }
+
+  .item-{
+    text-decoration: none;
+    color: #949299;
+    margin-top: 40%;
+    font-weight: 500;
+    display: flex;
+  }
+  
+
+  .quadrados{
+    display: none;
+  }
+
+  .ovo{
+    width: 100%;
+  }
+
+  .slogan-2{
+    width: 79%;
+    text-align: center;
+    margin-left: 2%;
+  }
+
+  .paragrafo{
+    width: 87%;
+    text-align: center;
+  }
+
+  .conteudo{
+    margin-left: 11%;
+  }
+
+  .learn{
+    text-align: center;
+    margin-right: 15%;
+  }
+
+  .foto-cereja-mob {
+    background: url('/design/images/mobile/image-graphic-design.jpg');
+    background-size: cover;
+    width: 100%;
+  }
+
+  .graphic{
+    margin-top: 100%;
+  }
+
+  .graphic-text{
+    margin-left: 6%;
+    width: 87%;
+  }
+
+  .foto-laranja-mob{
+    background: url('/design/images/mobile/image-photography.jpg');
+    width: 100%;
+    background-size: cover;
+  }
+
+  .clientes-titulo{
+    font-size: 21px;
+    letter-spacing: 4px;
+  }
+
+  .cliente{
+    margin-top: 9%;
+  }
+
+  .cliente-texto{
+    width: 73%
+  }
+  .profissao{
+    margin-top: 10%;
+  }
+  .assinatura{
+    margin-top: 10%;
+  }
+
+  .sunnySide{
+    margin-bottom: 6%;
+  }
+
+
+  .footer-links{
+    margin-bottom: 6%;
+  }
+
+  .social-media{
+    margin-bottom: 8%;
+  }
 }
